Temporarily remove polaroid to avoid image distortion until real images are incorporated

--- a/css/scenarios.css
+++ b/css/scenarios.css
@@ -142,7 +142,7 @@ section, .view head > title {
 
 .polaroid {
     width: 209px;
-    height: 230px;
+    /*height: 230px;*/
 }
 
 .bg-hall {
